# op_energy_archive

btc_difficulty_util/: .gitignore  CMakeLists.txt  README.md  main.cpp
btc_difficulty_util/util/: strencodings.h
cg_rdiff_gmp/: CMakeLists.txt  README.md  chaingrease.cpp  chainwork_dec2020.py  floats_cw5.csv.bz2  main_chaingrease.csv.bz2  rewrite_output_readme.py
cg_uint256/: CMakeLists.txt  README.md  hash.h  main.cpp  main_chaingrease.csv  rewrite_output_readme.py
oe_test_boost/: CMakeLists.txt  README.md  ab.test  fixture_local.h  fs.h  main.cpp  main.cpp_orig  oe_uint256_tests.cpp  random.h  rewrite_output_readme.py  test_oe_bitcoin.h  uint256.cpp
oe_uint256/: CMakeLists.txt  README.md  arith_uint256.cpp  main.cpp  rewrite_output_readme.py
oe_uint256/util/: strencodings.cpp
op_klange_cgiserver/cgi_test0dir/: cgiserver
op_klange_cgiserver/cgi_test0dir/pages/: aconcagua  calcops_c3.cgi
op_klange_server/: README.md  do_make_install.sh
sw_op_energy/: BITS_stats.ipynb  BITS_stats.md  Difficulty_Ex0.ipynb  Difficulty_Ex0.md  README.md  btc_hist_misc.html  btc_hist_misc.md  calc_OP_ENERGY.ipynb  calc_OP_ENERGY.md  chainwork_dec2020.ipynb  chainwork_dec2020.md  datachain_ETL_Overview.ipynb  datachain_ETL_Overview.md  get_blk_test.py  math_ex_655171.ipynb  math_ex_655171.md  math_test_py2.ipynb  math_test_py2.md  oetool.cgi  session_notes1.txt  setup.py  test_math.py
web-server-min/: README.md  do_get_calcops.sh  do_one_calcops28.sh  index.html  server.py  serverB.py
web-server-min/server/cgi_bin/: calcops_28.cgi  calcops_283.cgi  chart00.cgi  (+1 more)
