project(chaingrease)
cmake_minimum_required(VERSION 3.8.0)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

add_executable(chaingrease chaingrease.cpp)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(GMPXX REQUIRED)
set(LIBS ${LIBS} ${GMP_LIBRARY} ${GMPXX_LIBRARIES})
include_directories(${GMP_INCLUDE_DIR})
target_link_libraries(chaingrease ${LIBS})

set(CHAINGREASE_MAJOR_VERSION 0)
set(CHAINGREASE_MINOR_VERSION 1)
set(CHAINGREASE_PATCH_VERSION 0)
set(CHAINGREASE_VERSION ${CHAINGREASE_MAJOR_VERSION}.${CHAINGREASE_MINOR_VERSION}.${CHAINGREASE_PATCH_VERSION})
set(COPY_YEAR 2020)

set(CPACK_PACKAGE_VERSION_MAJOR ${CHAINGREASE_MAJOR_VERSION})
set(CPACK_PACKAGE_VERSION_MINOR ${CHAINGREASE_MINOR_VERSION})
set(CPACK_PACKAGE_VERSION_PATCH ${CHAINGREASE_PATCH_VERSION})
set(CPACK_SOURCE_IGNORE_FILES /\\\\.git;.*~)
include(CPack)
